--- a/index2.html
+++ b/index2.html
@@ -14,10 +14,32 @@
     <div class="split left">
         <div class="centered">
             <div class="home-section">
-                <p>Home</p>
+                <h2>Hello.</h2>
+                <p>I'm a full stack</p>
+                <p>web developer</p>
             </div>
             <div class="about-section">
-                <p>The text</p>
+                <p>I am a Full Stack developer specialising in Ruby on Rails, Vue.js, Django, HTML/CSS and AWS.</p>
+               <p> Motivated and hard working, I am particularly interested in Web Development and Blockchain Technologies.<p/>
+                    <p>Frontend: Vue.js, JavaScript ES6, CSS/SCSS/SASS</p>
+                    <i class="devicon-html5-plain-wordmark colored"></i>
+                    <i class="devicon-css3-plain-wordmark colored"></i>
+                    <i class="devicon-javascript-plain colored"></i>
+                    <i class="devicon-rails-plain-wordmark colored"></i>
+                    <i class="devicon-vuejs-plain-wordmark"></i>
+                    <i class="devicon-sass-original colored"></i>
+                    <p>Backend: Ruby, Ruby on Rails, Python, Django, Solidity(basic)</p>
+                    <i class="devicon-ruby-plain-wordmark colored"></i>
+                    <i class="devicon-rails-plain colored"></i>
+                    <i class="devicon-django-plain colored"></i>
+                    <i class="devicon-python-plain colored"></i>
+                    <p>Database: PostgresQL</p>
+                    <i class="devicon-postgresql-plain colored"></i>
+                    <p>Others: Figma, Git, Heroku, AWS</p>
+                    
+                    <i class="devicon-git-plain colored"></i>
+                    <i class="devicon-heroku-original colored"></i>
+                    <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
             </div>
             <div class="demo">
                 <div id="demo-day-section" class="d-flex align-items-start">
